# backend/backend_app/schema_dto/address_update_schema_dto.py
@@ -1,0 +1,9 @@
+from marshmallow import Schema, fields
+
+class AddressUpdateSchemaDTO(Schema):
+    
+    client_id = fields.Integer(required=False)
+    street = fields.String(required=False)
+    city = fields.String(required=False)
+    neighborhood = fields.String(required=False)
+    complement = fields.String(load_default=None)
